turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:33: error: expected start of definition
	override def run() { 
                 ^LangtonsAnt:46: error: Unmatched closing brace '}' ignored here
}
^